addressing some of rev C comments

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -49,12 +49,11 @@ When you load a data set into R, you first need to tell R where those files live
 computer (*local*) or somewhere on the internet (*remote*). In this section, we will discuss the case where the file lives on your computer.
 
 The place where the file lives on your computer is called the "path". You can think of the path as directions to the file. There are two kinds of 
-paths: relative paths and absolute paths. A relative path is where the file is with respect to where you currently are on the computer (e.g., where the 
-Jupyter notebook file that you're working in is). On the other hand, an absolute path is where the file is in respect to the base (or root) folder of 
+paths: relative paths and absolute paths. A relative path is where the file is with respect to where you currently are on the computer (e.g., where the file that you're working in is). On the other hand, an absolute path is where the file is in respect to the base (or root) folder of 
 the computer's filesystem.
 
-Suppose our computer's filesystem looks like the picture below, and we are working in the Jupyter notebook titled `worksheetk_02.ipynb`. If we want to 
-read in the `.csv` file named `happiness_report.csv` into our Jupyter notebook using R, we could do this using either a relative or an absolute path. 
+Suppose our computer's filesystem looks like the picture in Figure \@ref(fig:file-system-for-export-to-intro-datascience), and we are working in a file titled `worksheet_02.ipynb`. If we want to 
+read in the `.csv` file named `happiness_report.csv` into R, we could do this using either a relative or an absolute path. 
 We show both choices below.
 
 ```{r file-system-for-export-to-intro-datascience, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example file system", fig.retina = 2, out.width="840"}
@@ -63,14 +62,14 @@ knitr::include_graphics("img/file-system-for-export-to-intro-datascience.svg")
 
 **Reading `happiness_report.csv` using a relative path:**
 
-```
+```{r eval = F}
 happiness_data <- read_csv("data/happiness_report.csv")
 ```
 
 **Reading `happiness_report.csv` using an absolute path:**
 
-```
-happiness_data <- read_csv("/home/jupyter/dsci-100/worksheet_02/data/happiness_report.csv")
+```{r eval = F}
+happiness_data <- read_csv("/home/dsci-100/worksheet_02/data/happiness_report.csv")
 ```
 
 So which one should you use? Generally speaking, to ensure your code can be run 
@@ -120,7 +119,7 @@ And here is a review of how we can use `read_csv` to load it into R. First we
 load the `tidyverse` package to gain access to useful functions for reading the 
 data. 
 
-```{r, message = TRUE}
+```{r, message = F}
 library(tidyverse)
 ```
 
@@ -165,7 +164,7 @@ our data is being read in.
 canlang_data
 ```
 
-To successfully read data like this into R, the `skip` argument can be useful to tell R how many lines to skip before it should start reading in the data. In the example above, we would set this value to 3:
+To successfully read data like this into R, the `skip` argument can be useful to tell R how many lines to skip before it should start reading in the data. In the example above, we would set this value to 3. How did we know to skip 3 lines? We looked at the data! Open your data in a text editor and look at the file to decide how many lines to skip. 
 
 ```{r}
 canlang_data <- read_csv("data/can_lang_meta-data.csv", skip = 3)
@@ -203,23 +202,7 @@ canlang_data
 ### Previewing a data file before reading it into R
 
 In all the examples above, we gave you previews of the data file before we read it into R. This is essential so that you can see whether or not there are column names, what the 
-delimiters are, and if there are lines you need to skip. You should do this yourself when trying to read in data files. In Jupyter, you preview data as a plain text file by right-clicking
-on the file's name in the Jupyter home menu and selecting "Open with" and then selecting "Editor". 
-
-```{r open-data-w-editor-01, echo = FALSE, fig.cap = "Opening data files with an editor in Jupyter", fig.retina = 2, out.width="100%"}
-image_read("img/open_data_w_editor_01.png") %>% 
-  image_crop("3632x2000")
-```
-
-```{r open-data-w-editor-02, echo = FALSE, fig.cap = "A data file as viewed in an editor in Jupyter", fig.retina = 2, out.width="100%"}
-image_read("img/open_data_w_editor_02.png") %>% 
-  image_crop("3632x2000")
-```
-
-If you do not specify to open the data file with an editor, then Jupyter will 
-render a nice table for you and you will not be able to see the column
-delimiters, and therefore you will not know which function to use, nor
-which arguments to use and values to specify for them. 
+delimiters are, and if there are lines you need to skip. You should do this yourself when trying to read in data files.
 
 ## Reading data from an Microsoft Excel file
 
@@ -274,7 +257,7 @@ canlang_data <- read_excel("data/can_lang.xlsx")
 canlang_data
 ```
 
-If the `.xlsx` file has multiple sheets, you have to use the `sheet` argument to specify the sheet number or name. You can also specify cell ranges using the `range` argument. This functionality is useful when a single sheet contains multiple tables (a sad thing that happens to many Excel spreadsheets).
+If the `.xlsx` file has multiple sheets, you have to use the `sheet` argument to specify the sheet number or name. You can also specify cell ranges using the `range` argument. This functionality is useful when a single sheet contains multiple tables (a sad thing that happens to many Excel spreadsheets because multiple tables makes reading in data more difficult).
 
 As with plain text files, you should always explore the data file before importing it into R. Exploring the data beforehand helps you decide which arguments you need to to load the data into R successfully. If you do not have the Excel program on your computer, you can use other programs to preview the file. Examples include Google Sheets and Libre Office. 
 
@@ -890,4 +873,3 @@ data you are requesting and how frequently you are making requests.
 - If you read the subsection on obtaining data from the web via scraping and APIs, we provide two companion tutorial video links:
     - [A brief video tutorial](https://www.youtube.com/embed/YdIWI6K64zo) on using the SelectorGadget tool to obtain desired CSS selectors for extracting the price and size data for apartment listings on CraigsList
     - [Another brief video tutorial](https://www.youtube.com/embed/O9HKbdhqYzk) on using the SelectorGadget tool to obtain desired CSS selectors for extracting Canadian city names and 2016 census populations from Wikipedia
-- [A brief video on Linux command line basics](https://www.youtube.com/embed/6orO4YMAyeQ) 
