explaining plain text

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -101,7 +101,7 @@ See this video for another explanation:
 
 ## Reading tabular data from a plain text file into R
 
-Now we will learn more about reading tabular data from a plain text file into R, as well as how to write tabular data to a file. 
+Now we will learn more about reading tabular data from a plain text file (a document containing only text) into R, as well as how to write tabular data to a file. 
 Last chapter, we learned about using the `tidyverse` `read_csv` function when reading files that match that function's expected defaults 
 (column names are present, and commas are used as the separator between columns). In this section, we will learn how to read 
 files that do not satisfy the default expectations of `read_csv`. 
@@ -204,7 +204,7 @@ canlang_data
 In all the examples above, we gave you previews of the data file before we read it into R. This is essential so that you can see whether or not there are column names, what the 
 delimiters are, and if there are lines you need to skip. You should do this yourself when trying to read in data files.
 
-## Reading data from an Microsoft Excel file
+## Reading data from a Microsoft Excel file
 
 There are many other ways to store tabular data sets beyond plain text files, and similarly, many ways to load those data sets into R. For example, it is very common to encounter,
 and need to load into R, data stored as a Microsoft Excel spreadsheet (with the filename extension `.xlsx`). 
