explained plain text editor

--- a/index.Rmd
+++ b/index.Rmd
@@ -180,7 +180,7 @@ knitr::include_graphics("img/spreadsheet_vs_dataframe.PNG")
 The first kind of data file that we will learn how to load into R (as a data frame) is the *comma-separated values* format (`.csv` for short).
 These files have names ending in `.csv`, and can be opened and saved using common spreadsheet programs like Microsoft Excel and Google Sheets. 
 For example, the `.csv` file named `can_lang.csv` [is included with the code for this book](https://raw.githubusercontent.com/UBC-DSCI/introduction-to-datascience/master/data/can_lang.csv). 
-If we were to open this data in a plain text editor, we would see each row on its own line, and each entry in the table separated by a comma:
+If we were to open this data in a plain text editor (a program that removes all formatting from programs like Word, such as Notepad), we would see each row on its own line, and each entry in the table separated by a comma:
 
 ```{bash, echo=FALSE, comment=NA}
 head -n 10 data/can_lang.csv
