addressing some of rev C comments

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -334,7 +334,7 @@ tail(aboriginal_lang_db)
 ```
 Additionally, some operations will not work to extract columns or single values from the reference given by the `tbl` function. Thus, once you have finished your data wrangling of the `tbl` database reference object, it is advisable to bring it into your local machine's memory using `collect` as a data frame. 
 
-> Warning: Usually, databases are very big! Reading the object into your local machine may give an error or take a lot of time to run so be careful if you plan to do this! 
+> Warning: Usually, databases are very big! Reading the object into your local machine may give an error or take a lot of time to run so be careful if you plan to do this! This is why we may want to filter rows or select columns first before reading it in!
  
 #### Reading data from a PostgreSQL database 
 
