updating the section number reference

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -2,7 +2,7 @@
 
 ## Overview 
 
-This chapter will be centred around defining tidy data, 
+This chapter is centred around defining tidy data, 
 a data format that is suitable for analysis, 
 and the tools needed to transform raw data into this format.
 This will be presented in the context of a real-world data science application, 
@@ -39,10 +39,11 @@ to use and manipulate these objects in our data analysis.
 
 ### What is a data frame?
 
-To define a **data frame**, first, let's explain a few commonly used terms in statistics:
+To define a **data frame**, first, let's reiterate a few commonly used terms in statistics:
 
 - **observation** -  all of the quantities or a qualities we collect from a given entity/object 
 - **variable** - any characteristic, number, or quantity that can be measured or collected 
+
 -  **value** - a single collected quantity or a quality from a given entity/object
 
 From a data perspective, a data frame is a rectangle where the rows are the observations:
@@ -74,7 +75,7 @@ knitr::include_graphics("img/vectors.jpeg")
 
 In R, **vectors** are objects that can contain one or more elements. The vector elements are ordered, and they must all be of the same *data type*. R has several different basic data types, as shown in table \@ref(tab:datatype-table).
 
-In the vector shown in Figure \@ref(fig:02-vector), the elements are of numeric type:
+In the vector shown in Figure \@ref(fig:02-vector), the elements are of integer type:
 
 ```{r 02-vector, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example of a numeric type vector", fig.retina = 2, out.width = "600"}
 knitr::include_graphics("img/vector.jpeg")
@@ -119,7 +120,7 @@ knitr::include_graphics("img/vec_vs_list.jpeg")
 As mentioned earlier, a data frame is really a special type of list
 where the elements can only be vectors.
 Representing data with such an object enables us to easily work with our data
-in a spreadsheet-like manner. It also allows us to have columns,
+in a tabular manner. It also allows us to have columns,
 containing qualities or values, for different statistical variables linked
 in a row for one observation - these columns cannot be independently sorted.
 This is similar to a table in a database.
@@ -146,7 +147,7 @@ Table: (\#tab:datastructure-table) Basic data structures in R
 
 ## Tidy Data
 
-There are many ways a spreadsheet-like data set can be organized. 
+There are many ways a tabular data set can be organized. 
 This chapter will focus on introducing the *tidy data* format of organization 
 and how to make your raw (and likely messy) data tidy. 
 
@@ -165,7 +166,7 @@ knitr::include_graphics("img/tidy_data.jpeg")
 
 ### Why is tidy data important in R?
 
-First, one of R's most popular plotting toolsets, the `ggplot2` package
+First, tidy data is a straightforward way to work with data and thus, one of R's most popular plotting toolsets, the `ggplot2` package
 (which is one of the packages that the `tidyverse` package loads), expects the
 data to be in a tidy format. Second, most statistical analysis functions also
 expect data in a tidy format. Given that both of these tasks are central in
@@ -192,7 +193,7 @@ knitr::include_graphics("img/wide_to_long.jpeg")
 ```
 We can use the function `pivot_longer`, which combines columns, making the data frame longer and narrower. To learn how to use `pivot_longer`, we will work with a data set called [`region_lang`](https://ttimbers.github.io/canlang/), containing data retrieved from the 2016 Canadian census. For each census metropolitan area, this data set includes counts of how many Canadians cited each language as their mother tongue, the language spoken most often at home/work and which language they know. 
 
-We will use `read_csv` to import a subset of the `region_lang` data called `region_lang_top5_cities_wide.csv`, which contains only the counts of how many Canadians cited each language as their mother tongue for five major Canadian cities (Toronto, Montreal, Vancouver, Calgary and Edmonton). Our data set is stored in an untidy format, as shown below:
+We will use `read_csv` to import a subset of the `region_lang` data called `region_lang_top5_cities_wide.csv`, which contains only the counts of how many Canadians cited each language as their mother tongue for five major Canadian cities (Toronto, Montréal, Vancouver, Calgary and Edmonton). Our data set is stored in an untidy format, as shown below:
 
 ```{r 02-tidyverse, warning=FALSE, message=FALSE}
 library(tidyverse)
@@ -202,7 +203,7 @@ lang_wide
 
 
 
-What is wrong with our untidy format above? From a data analysis perspective, this format is not ideal because, in this format, the outcome of the variable *region* (Toronto, Montreal, Vancouver, Calgary and Edmonton) is stored as column names. Thus it is not easily accessible for the data analysis functions we will want to apply to our data set. Additionally, the values of the *mother tongue* variable are spread across multiple columns, which will prevent us from doing any desired visualization or statistical tasks until we combine them into one column. For instance, suppose we want to know which languages had the highest number of Canadians reporting it as their mother tongue among all five regions? This question would be tough to answer with the data in its current format. It would be much easier to answer if we tidy our data first. 
+What is wrong with our untidy format above? From a data analysis perspective, this format is not ideal because, in this format, the outcome of the variable *region* (Toronto, Montréal, Vancouver, Calgary and Edmonton) is stored as column names. Thus it is not easily accessible for the data analysis functions we will want to apply to our data set. Additionally, the values of the *mother tongue* variable are spread across multiple columns, which will prevent us from doing any desired visualization or statistical tasks until we combine them into one column. For instance, suppose we want to know the languages with the highest number of Canadians reporting it as their mother tongue among all five regions. This question would be tough to answer with the data in its current format. It would be much easier to answer if we tidy our data first. 
 
 To accomplish this data transformation, we will use the `tidyverse` function `pivot_longer`. Figure \@ref(fig:img-pivot-longer) details what we need to specify to use `pivot_longer`.
 
@@ -210,7 +211,7 @@ To accomplish this data transformation, we will use the `tidyverse` function `pi
 knitr::include_graphics("img/pivot_longer.jpeg")
 ```
 
-For the above example, we use `pivot_longer` to combine the Toronto, Montreal, Vancouver, Calgary and Edmonton columns into a single column called `region`, and create a column called `mother_tongue` that contains the count of how many Canadians report each language as their mother tongue for each metropolitan area. We use a colon `:` between Toronto, and Edmonton tells R to select all the columns in between Toronto and Edmonton: 
+For the above example, we use `pivot_longer` to combine the Toronto, Montréal, Vancouver, Calgary and Edmonton columns into a single column called `region`, and create a column called `mother_tongue` that contains the count of how many Canadians report each language as their mother tongue for each metropolitan area. We use a colon `,` between Toronto, and Edmonton tells R to select all the columns in between Toronto and Edmonton: 
 ```{r}
 lang_mother_tidy <- pivot_longer(lang_wide,
   cols = Toronto:Edmonton,
@@ -236,22 +237,22 @@ The data above is now tidy because all three criteria for tidy data have now bee
 2. Each observation, i.e., each `category`, `language`, `region`, and count of Canadians where that language is the mother tongue, are in a single row.
 3. Each value is a single cell, i.e., its row, column position in the data frame is not shared with another value.
 
-### Going from long to wide using `pivot_wider`
+### Going from long to wide using `pivot_wider` {#pivot-wider}
 
 Suppose we have observations spread across multiple rows rather than in a single row. For example, in Figure \@ref(fig:long-to-wide), the table on the left is an
 untidy format because the `count` column contains two variables (population and commuter count) and each observation is split across two rows.
-Using data in this format means it's harder to apply functions when the values are not in their own column. We can reshape this data set to a wider format by creating a column called "population" and a column called "commuter," which is the table on the right.
+Using data in this format means it's harder to apply functions when the values are not in their own column. For example, finding the maximum number of commuters is possible to do with the untidy table but requires a few more steps and is cumbersome. We can reshape this data set to a wider format by creating a column called "population" and a column called "commuters", which is the table on the right.
 
 ```{r long-to-wide, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide data", fig.retina = 2, out.width = "1150"}
 knitr::include_graphics("img/long_to_wide.jpeg")
 ```
-To tidy this type of data, we can use the function `pivot_wider`, which generally increases the number of columns (widens) and decreases the number of rows in a data set. The data set `region_lang_top5_cities_long.csv` contains the number of Canadians reporting the primary language at home and work for five major cities (Toronto, Montreal, Vancouver, Calgary and Edmonton). 
+To tidy this type of data in R, we can use the function `pivot_wider`, which generally increases the number of columns (widens) and decreases the number of rows in a data set. The data set `region_lang_top5_cities_long.csv` contains the number of Canadians reporting the primary language at home and work for five major cities (Toronto, Montréal, Vancouver, Calgary and Edmonton). 
 ```{r 02-reading-long, warning=FALSE, message=FALSE}
 lang_long <- read_csv("data/region_lang_top5_cities_long.csv")
 lang_long
 ```
 
-What is wrong with this format above? In this example, each observation should be a language in a region. However, in the messy data set above, each observation is split across multiple two rows. One where the count for `most_at_home` is recorded and the other where the count for `most_at_work` is recorded. Suppose we wanted to visualize the relationship between the number of Canadians reporting their primary language at home and work. It would be difficult to do that with the data in its current format. To fix this, we will use `pivot_wider`, and we need to specify the:
+What is wrong with this format above? In this example, each observation should be a language in a region. However, in the messy data set above, each observation is split across multiple rows. One where the count for `most_at_home` is recorded and the other where the count for `most_at_work` is recorded. Suppose we wanted to visualize the relationship between the number of Canadians reporting their primary language at home and work. It would be difficult to do that with the data in its current format. To fix this, we will use `pivot_wider`, and we need to specify the:
 
 1. `data`: the data set
 
@@ -282,9 +283,7 @@ You might notice that we have the same number of columns in our tidy data set as
 
 ### Using `separate` to deal with multiple delimiters
 
-Data are also not considered tidy when multiple values are stored in the same cell, as discussed above. In addition to the previous untidiness, we addressed in the earlier versions of this data set, the one we show below is even messier: 
-
-the `Toronto`, `Montreal`, `Vancouver`, `Calgary` and `Edmonton` columns contain the number of Canadians reporting their primary language at home and work in one column separated by the delimiter "/". The column names are the values of a variable, AND each value does not have its own cell! To make this messy data tidy, we'll have to fix both of these issues.
+Data are also not considered tidy when multiple values are stored in the same cell. The data set we show below is even messier than the ones we dealt with above: the `Toronto`, `Montréal`, `Vancouver`, `Calgary` and `Edmonton` columns contain the number of Canadians reporting their primary language at home and work in one column separated by the delimiter "/". The column names are the values of a variable, AND each value does not have its own cell! To turn this messy data into tidy data, we'll have to fix these issues.
 
 ```{r, warning=FALSE, message=FALSE}
 lang_messy <- read_csv("data/region_lang_top5_cities_messy.csv")
@@ -321,6 +320,14 @@ lang_no_delimiter <- separate(lang_messy_longer,
 lang_no_delimiter
 ```
 
+
+Is this data set now tidy? If we recall the three criteria for tidy data:
+
+- each row is a single observation,
+- each column is a single variable, and
+- each value is a single cell.
+
+We can see that this data now satisfies all three criteria, making it easier to analyze. However, we aren't done yet! We have a few more tasks we need to do to get this data in a more usable format, which we will see in the sections below. 
 
 ### Using `select` to extract a range of columns
 
@@ -363,7 +370,8 @@ When we look at the table we got from `filter` above, it isn't quite doing what 
 
 ### Using `mutate` to modify columns
 
-Notice in the table above the word `<chr>` appears beneath each of the column names. The word under the column name indicates the data type of each column. Here all of our variables are "character" data types. Recall, a character data type is a letter or a number surrounded by quotes. In the previous example, `most_at_home` and `most_at_work`  were `<dbl>` (double) (you can verify this by looking at the tables in the previous sections), which is a numeric data type. This change is due to the delimiter "/" when we read in this messy data set. R read the columns in as character types, and it stayed that way after we separated the columns. 
+Notice in the table above the word `<chr>` appears beneath each of the column names. The word under the column name indicates the data type of each column. Here all of our variables are "character" data types. Recall, a character data type is a letter or a number surrounded by quotes. In the previous example in section 
+\@ref(pivot-wider), the `most_at_home` and `most_at_work` variables were `<dbl>` (double) (you can verify this by looking at the tables in the previous sections), which is a numeric data type. This change is due to the delimiter "/" when we read in this messy data set. R read the columns in as character types, and it stayed that way after we separated the columns. 
 
 Here it makes sense for `region`, `category`, and `language` to be stored as a character type. However, if we want to apply any functions that treat the `most_at_home` and `most_at_work` columns as a number (e.g. finding rows that are above a numeric threshold of a column), it won't be possible to do if the variable is stored as a `character`. R has a variety of data types, but here we will use the function `mutate` to convert these two columns to a "numeric" data type. `mutate` is a function that will allow us to create a new variable or transform existing ones in our data set. We specify the data set in the first argument, and in the proceeding arguments, we specify the function we want to apply (`as.numeric`) to which columns (`most_at_home`, `most_at_work`). Then we give the mutated variable a new name. Here we are naming the columns the same names ("most_at_home", "most_at_work"), but you can call these mutated variables anything you'd like. 
 
@@ -462,18 +470,7 @@ shorter one will be recycled to match the longer one. Here the elements of
 
 ### Creating a visualization with tidy data
 
-Is this data set, `offical_langs`, now tidy?
-
-```{r}
-official_langs
-```
- Well, if we recall the three criteria for tidy data:
-
-- each row is a single observation,
-- each column is a single variable, and
-- each value is a single cell.
-
-We can see that this data now satisfies all three criteria, making it easier to analyze. For example, we could visualize how many people speak each of Canada's two 
+Now that we have cleaned and wrangled our data, we can visualize how many people speak each of Canada's two 
 official languages (English and French) as their primary language at home in 
 these 5 regions. We can use
 `ggplot` to create our data visualization. Here we create a bar chart to 
@@ -492,7 +489,7 @@ ggplot(official_langs, aes(x = region, y = most_at_home_proportion, fill = langu
   theme_bw()
 ```
 
-From this visualization, we can see that in Calgary, Edmonton, Toronto and Vancouver, English was reported as the most common primary language used at home compared to French. However, in Montreal, French was reported as the most common primary language used at home over English. 
+From this visualization, we can see that in Calgary, Edmonton, Toronto and Vancouver, English was reported as the most common primary language used at home compared to French. However, in Montréal, French was reported as the most common primary language used at home over English. 
 
 ### Notes on defining tidy data
 
@@ -556,7 +553,7 @@ Next, let's learn about the details of using the pipe, and look at some examples
 
 ### Using `|>` to combine `filter` and `select`
 
-Let's work with our tidy `lang_home_tidy` data set from above, which contains the number of Canadians reporting their primary language at home and work for five major cities (Toronto, Montreal, Vancouver, Calgary and Edmonton):
+Let's work with our tidy `lang_home_tidy` data set from above, which contains the number of Canadians reporting their primary language at home and work for five major cities (Toronto, Montréal, Vancouver, Calgary and Edmonton):
 ```{r, warning=FALSE, message=FALSE}
 lang_home_tidy
 ```
