dealing with duplicated explanation of functions, making plot easier, grammar and spelling fixes

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -427,10 +427,9 @@ filter(region_data, region %in% c("Toronto", "Montréal", "Vancouver", "Calgary"
 ```
 
 > **What's the difference between `==` and `%in%`?**
-> Suppose we have two vectors, `vector1` and `vector2`. 
-
-> `vector1 == vector2` 
-will compare the vectors element by element. It checks if the first element of 
+> Let's suppose we have two vectors, `vector1` and `vector2`. If you type 
+> `vector1 == vector2` into R it
+will compare the vectors element by element. R checks if the first element of 
 `vector1` equals the first element of `vector2`, the second element of `vector1`
 equals the second element of `vector2` etc. 
 > On the other hand, `vector1 %in% vector2`
@@ -460,7 +459,7 @@ official_langs
 ```
 
 > Notice that we divided a vector with 10 elements (`most_at_home`) by a vector with 
-only 5 elements (`city_populations`). What gives? Arithmetic operations of vectors are performed memberwise meaning the first element of `most_at_home` will be divided by the first element 
+only 5 elements (`city_populations`). What gives? Arithmetic operations of vectors are performed *memberwise* meaning the first element of `most_at_home` will be divided by the first element 
 of `city_populations`, the second element of `most_at_home` will be divided by the second element of `city_populations` and so on. When two vectors have different lengths, the 
 shorter one will be recycled to match the longer one. Here the elements of
 `city_populations` will be repeated once to match the length of `most_at_home`.
@@ -477,17 +476,16 @@ these 5 regions. We can use
 represent the proportions for each region, and colour the proportions by language. 
 
 ```{r 02-plot}
-ggplot(official_langs, aes(x = region, y = most_at_home_proportion, fill = language)) +
+ggplot(official_langs, 
+       aes(x = most_at_home_proportion, 
+           y = region,
+           fill = language)) +
   geom_bar(stat = "identity") +
-  scale_color_manual(values = c("deepskyblue2", "firebrick1")) +
-  xlab("Region") +
-  scale_y_continuous(
-    name = "Proportion of residents reporting their primary language at home",
-    labels = scales::comma
-  ) +
-  coord_flip() + # making bars horizontal
-  theme_bw()
+  xlab("Proportion of residents reporting their primary language at home") + 
+  ylab("Region")
 ```
+
+> Don't worry too much about the code to make this plot, we will talk more in detail about visualizations in chapter \@ref(viz).
 
 From this visualization, we can see that in Calgary, Edmonton, Toronto and Vancouver, English was reported as the most common primary language used at home compared to French. However, in Montréal, French was reported as the most common primary language used at home over English. 
 
@@ -538,7 +536,7 @@ output <- data |>
             select(new_col)
 ```
 
-> Note `%>%` is the old pipe operator so you may see it used 
+> Note `%>%` is the previous version of the pipe operator so you may see it used 
 in some textbooks or other sources. There are some drawbacks to using the `%>%` 
 pipe operator, thus, in this textbook we will be using the new pipe operator syntax `|>`. 
 
@@ -586,14 +584,14 @@ As you can see, both of these approaches give us the same output, but the second
 
 The `|>` can be used with any function in R. Additionally, we can pipe together more than two functions. For example, we can pipe together three functions to order the rows by counts of the language most spoken at home for only the counts that are more than 10,000 and only include the region, language and count of Canadians reporting their primary language at home in our table. 
 
-To order the  by counts of the language most spoken at home we will use another 
-`tidyverse` function, `arrange`. This function takes column names as input and 
+To order by counts of the language most spoken at home we will use the 
+`tidyverse` function, `arrange`. Recall this function takes column names as input and 
 orders the rows in the data frame in ascending order based on the values in the 
 columns. Here we use only one column for sorting (`most_at_home`), but more than 
 one can also be used. To do this, list additional columns separated by commas. 
 The order they are listed in indicates the order in which they will be used for 
 sorting. This is much like how an English dictionary sorts words: first by the 
-first letter, then by the second letter, and so on. *Note: If you want to sort 
+first letter, then by the second letter, and so on. *Remember: If you want to sort 
 in reverse order, you can pair a function called `desc` with `arrange` (e.g., 
 `arrange(desc(column_name))`).*
 
@@ -649,7 +647,7 @@ lang_summary_by_region
 
 ### Additional reading on the `dplyr` functions
 
-As we breifly mentioned earlier in a note, the `tidyverse` is actually a *meta R package*: it installs and loads a collection of R packages that all follow 
+As we briefly mentioned earlier in a note, the `tidyverse` is actually a *meta R package*: it installs and loads a collection of R packages that all follow 
 the tidy data philosophy we discussed above. One of the `tidyverse` packages is `dplyr` - a data wrangling workhorse. You have already met six of 
 the dplyr function (`select`, `filter`, `mutate`, `arrange`, `summarize`, and `group_by`). To learn more about those six and meet a few more 
 useful functions, we recommend you checkout [this chapter](http://stat545.com/block010_dplyr-end-single-table.html#where-were-we) of the Stat 545 book.
