fixed figure label

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -10,7 +10,9 @@ charts, line graphs, and histograms) for data using R.
 
 ## Chapter learning objectives
 
-- Describe when to use the following kinds of visualizations to answer specific questions using a dataset:
+By the end of the chapter, readers will be able to:
+
+- Describe when to use the following kinds of visualizations to answer specific questions using a data set:
     - scatter plots
     - line plots
     - bar plots 
@@ -375,7 +377,7 @@ ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent)) +
   scale_y_log10(labels = scales::comma)
 ```
 
-Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between the number of people who have a language as their mother tongue and the number of people who speak that language at home, is there a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)? One common way to explore this is to colour the data points on the scatter plot we have already created by group/category. For example, given that we have the higher-level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
+Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between the number of people who have a language as their mother tongue and the number of people who speak that language at home, is there a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)? One common way to explore this is to colour the data points on the scatter plot we have already created by group. For example, given that we have the higher-level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
 scatter plot to represent each language's higher-level language category.
 
 Here we want to distinguish the values according to the `category` group with which they belong.  
@@ -390,7 +392,7 @@ ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent, color 
   scale_y_log10(labels = scales::comma)
 ```
 
-In Figure \@ref(fig:scatter-colour-by-category), the points are coloured with the default `ggplot2` colour palette. But what if you want to use different colours? In R, one package that provides alternative colour palettes is `RColorBrewer` [@RColorBrewer]. You can visualize the list of colour palettes that `RColorBrewer` has to offer with the `display.brewer.all()` function. You can also print a list of colour blind friendly palettes by adding `colorblindFriendly = T` to the function.
+In Figure \@ref(fig:03-scatter-colour-by-category), the points are coloured with the default `ggplot2` colour palette. But what if you want to use different colours? In R, one package that provides alternative colour palettes is `RColorBrewer` [@RColorBrewer]. You can visualize the list of colour palettes that `RColorBrewer` has to offer with the `display.brewer.all()` function. You can also print a list of colour blind friendly palettes by adding `colorblindFriendly = T` to the function.
 
 ```{r}
 library(RColorBrewer)
