making sure writing is for intended audience, removing references to course, student etc

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -17,6 +17,9 @@ predictions from our classifier are, as well as how to improve our classifier
 (where possible) to maximize its accuracy.
 
 ## Chapter learning objectives 
+
+By the end of the chapter, readers will be able to:
+
 - Recognize situations where a classifier would be appropriate for making predictions
 - Describe what a training data set is and how it is used in classification
 - Interpret the output of a classifier
